Add dependency  files
Add dependency  files
* add package.json for PluginApp library dependencies
* add .gitignore
* update tsconfig.json
* create custom Typescript Definition for Blob.js
* remove unneeded icons

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,14 @@
 {
-  "compilerOptions": {
-    "module": "umd",
-    "target": "es5",
-    "rootDir": "src",
-    "outDir": "bin",
-  },
-  "exclude": [
-    "node_modules",
-    "libs"
-  ]
+    "compilerOptions": {
+        "module": "umd",
+        "target": "es5",
+        "rootDir": "src",
+        "outDir": "bin",
+        "noImplicitAny": false,
+        "sourceMap": false
+    },
+    "exclude": [
+        "node_modules",
+        "libs"
+    ]
 }
