--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,7 @@
         "noImplicitAny": false,
         "sourceMap": false
     },
-    "exclude": [
-        "node_modules",
-        "libs"
+    "include": [
+        "typings/index.d.ts"
     ]
 }
