basic node app running
albeit, environment detection failing!

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
         "sourceMap": false
     },
     "include": [
-        "typings/index.d.ts"
+        "typings/index.d.ts",
+        "src/**/*"
     ]
 }
