--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,7 @@
         "rootDir": "src",
         "outDir": "bin",
         "noImplicitAny": false,
-        "sourceMap": false,
-        "allowJs": true
+        "sourceMap": false
     },
     "include": [
         "typings/index.d.ts",
