working on the selenium adaptor

--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
   "dependencies": {
     "@types/es6-promise": "0.0.32",
     "commander": "^2.9.0",
-    "json-refs": "^2.1.6"
+    "json-refs": "^2.1.6",
+    "selenium-query": "^0.50.35"
   },
   "directories": {
     "doc": "docs"
