--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/es6-promise": "0.0.32",
     "commander": "^2.9.0",
     "json-refs": "^2.1.6",
+    "mkdirp": "^0.5.1",
     "selenium-query": "^0.50.35"
   },
   "directories": {
