--- a/package.json
+++ b/package.json
@@ -19,19 +19,20 @@
     "url": "https://github.com/mattpepper/journey-mapper/issues"
   },
   "devDependencies": {
-    "chai": "^3.5.0",
-    "mocha": "^3.1.0",
-    "typescript": "^2.0.3",
     "@types/Blob": "file:custom/@types/Blob",
     "@types/file-saver": "0.0.0",
     "@types/html2canvas": "^0.5.32",
     "@types/jquery": "^2.0.34",
     "@types/jszip": "0.0.31",
     "blob.js": "^1.0.1",
+    "chai": "^3.5.0",
     "file-saver": "^1.3.3",
     "jszip": "^3.1.3",
     "jszip-utils": "0.0.2",
-    "readwrite-gif": "^0.3.1"
+    "mocha": "^3.1.0",
+    "readwrite-gif": "^0.3.1",
+    "typescript": "^2.0.3",
+    "typings": "^2.1.0"
   },
   "scripts": {
     "start": "node bin/index.js",
