--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "commander": "^2.9.0",
     "json-refs": "^2.1.6",
     "mkdirp": "^0.5.1",
-    "selenium-query": "^0.50.35"
+    "selenium-query": "^0.50.35",
+    "selenium-webdriver": "^3.0.1"
   },
   "directories": {
     "doc": "docs"
