refactoring the cheerio selector and element iteration
It's now more targetted (not finding elements that aren't worth trying to modify) and retrurning the right data structure)

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/es6-promise": "0.0.32",
     "cheerio": "^0.22.0",
     "commander": "^2.9.0",
+    "get-urls": "^7.0.0",
     "json-refs": "^2.1.6",
     "mkdirp": "^0.5.1",
     "rimraf": "^2.5.4",
