--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "cheerio": "^0.22.0",
     "commander": "^2.9.0",
     "get-urls": "^7.0.0",
+    "js-beautify": "^1.6.8",
     "json-refs": "^2.1.6",
     "mkdirp": "^0.5.1",
     "rimraf": "^2.5.4",
